--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ body {
   color: hsl(233, 8%, 62%);
   line-height: 1.3;
   font-family: "Public Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 h1,
@@ -273,5 +274,225 @@ button:hover,
     flex: 2;
     order: 1;
     text-align: left;
+  }
+}
+
+.feature {
+  background-color: hsl(220, 16%, 96%);
+  text-align: center;
+}
+@media (min-width: 40em) {
+  .feature {
+    text-align: left;
+  }
+}
+.feature__intro {
+  margin-bottom: 60px;
+}
+@media (min-width: 64em) {
+  .feature__intro {
+    width: 60%;
+  }
+}
+@media (min-width: 64em) {
+  .feature__intro p {
+    font-size: 17px;
+    font-weight: 400;
+  }
+}
+@media (min-width: 40em) {
+  .feature__grid {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+.feature__item {
+  padding: 14px;
+}
+@media (min-width: 40em) {
+  .feature__item {
+    flex: 0 0 50%;
+  }
+}
+@media (min-width: 64em) {
+  .feature__item {
+    flex: 1;
+  }
+}
+.feature__icon {
+  margin-bottom: 27px;
+}
+@media (min-width: 64em) {
+  .feature__icon {
+    margin-bottom: 42px;
+  }
+}
+.feature__title {
+  font-size: 20px;
+  color: hsl(233, 26%, 24%);
+  font-weight: 300;
+  margin-bottom: 16px;
+}
+@media (min-width: 64em) {
+  .feature__title {
+    font-size: 24px;
+    margin-bottom: 24px;
+  }
+}
+.feature__description {
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+.articles {
+  background-color: hsl(0, 0%, 98%);
+}
+
+.article__grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 28px;
+}
+@media (min-width: 40em) {
+  .article__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 64em) {
+  .article__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+.article__item {
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+  transition: all 150ms;
+}
+.article__item:hover {
+  transform: scale(1.05);
+}
+.article__image {
+  height: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.article__text {
+  padding: 30px 30px 40px 30px;
+  color: hsl(233, 8%, 62%);
+}
+@media (min-width: 40em) {
+  .article__text {
+    padding: 30px 25px;
+  }
+}
+.article__author {
+  font-size: 10px;
+  margin-bottom: 13px;
+}
+.article__title {
+  color: hsl(233, 26%, 24%);
+  font-size: 18px;
+  line-height: 1.2;
+  margin-bottom: 8px;
+}
+.article__description {
+  font-size: 13px;
+}
+
+.footer {
+  background-color: hsl(233, 26%, 24%);
+  color: hsl(0, 0%, 100%);
+  text-align: center;
+  padding: 40px;
+}
+@media (min-width: 64em) {
+  .footer .container {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 3fr;
+    grid-template-areas: "logo links1 links2 cta" "social links1 links2 copyright";
+    gap: 16px;
+  }
+}
+.footer a {
+  color: hsl(0, 0%, 100%);
+}
+.footer__logo {
+  display: inline-block;
+}
+@media (max-width: 63.9375em) {
+  .footer__logo {
+    margin-bottom: 35px;
+  }
+}
+@media (min-width: 64em) {
+  .footer__logo {
+    grid-area: logo;
+  }
+}
+@media (max-width: 63.9375em) {
+  .footer__social {
+    margin-bottom: 35px;
+  }
+}
+@media (min-width: 64em) {
+  .footer__social {
+    grid-area: social;
+  }
+}
+.footer__links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 15px;
+}
+@media (max-width: 63.9375em) {
+  .footer__links {
+    gap: 20px;
+  }
+}
+@media (min-width: 64em) {
+  .footer__links {
+    justify-content: space-between;
+    align-items: start;
+    gap: 10px;
+  }
+}
+@media (min-width: 64em) {
+  .footer__links.col1 {
+    grid-area: links1;
+  }
+}
+@media (max-width: 63.9375em) {
+  .footer__links.col2 {
+    margin: 30px 0;
+  }
+}
+@media (min-width: 64em) {
+  .footer__links.col2 {
+    grid-area: links2;
+  }
+}
+@media (min-width: 64em) {
+  .footer__cta {
+    grid-area: cta;
+    text-align: right;
+  }
+}
+.footer__copyright {
+  font-size: 13px;
+  color: hsl(233, 8%, 62%);
+}
+@media (min-width: 64em) {
+  .footer__copyright {
+    grid-area: copyright;
+    text-align: right;
+  }
+}
+@media (max-width: 63.9375em) {
+  .footer__copyright {
+    margin-top: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
